--- a/gk/phone/about-us-dark.html
+++ b/gk/phone/about-us-dark.html
@@ -134,7 +134,7 @@ $('#u5374-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{
 $('#u5375-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u5376').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u5441').registerPositionScrollEffect([{"in":[-Infinity,0.15],"speed":[0,0]},{"in":[0.15,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u5441').registerOpacityScrollEffect([{"in":[-Infinity,0.15],"opacity":0,"fade":0},{"in":[0.15,0.15],"opacity":0},{"in":[0.15,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
+$('#u5441').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0.15],"opacity":0},{"in":[0.15,0.15],"opacity":0},{"fade":25,"in":[0.15,Infinity],"opacity":100}]);/* scroll effect */
 $('#u5606').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
