--- a/gk/phone/about-us.html
+++ b/gk/phone/about-us.html
@@ -128,7 +128,7 @@ Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u1480').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u1480').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":0,"fade":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
+$('#u1480').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"in":[0,0],"opacity":0},{"fade":25,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 $('#u5587').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
