--- a/gk/home-dark.html
+++ b/gk/home-dark.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>God's Kid Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=4062648449" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=522991797" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5637 {  pointer-events: none;}</style>
   <!--HTML Widget code-->
@@ -209,11 +209,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U3920-BP_infinity" template="home-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext anim_swing museBGSize Banner mse_pre_init" id="u3920" href="home-dark.html#gkdark" data-href="anchor:U3828:U3902" data-muse-uid="U3920"><!-- content --></a>
     <!-- /m_editable -->
-    <div class="browser_width" id="u5637-bw">
-     <div id="u5637"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U5640_animation" src="assets/curtain_night/curtain_night.html" scrolling="no"></iframe>
-     </div>
-    </div>
    </div>
    <div class="clearfix grpelem" id="pgkdark"><!-- column -->
     <a class="anchor_item colelem" id="gkdark"></a>
@@ -562,14 +557,13 @@ var muse_init=function(){require.config({baseUrl:""});require(["jquery","museuti
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3839').registerOpacityScrollEffect([{"in":[-Infinity,509],"opacity":0,"fade":0},{"in":[509,509],"opacity":0},{"in":[509,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
+$('#u3839').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,509],"opacity":0},{"in":[509,509],"opacity":0},{"fade":50,"in":[509,Infinity],"opacity":100}]);/* scroll effect */
 $('#u3921').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u3921').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
+$('#u3921').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"in":[0,0],"opacity":100},{"fade":100,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
 $('#u3913').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u3913').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u3913').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"in":[0,0],"opacity":100},{"fade":50,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
 $('#u3920').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,5]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
