--- a/gk/phone/gallery-dark.html
+++ b/gk/phone/gallery-dark.html
@@ -132,7 +132,7 @@ $('#u5422-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{
 $('#u5423-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u5424').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u5447').registerPositionScrollEffect([{"in":[-Infinity,0.15],"speed":[0,0]},{"in":[0.15,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u5447').registerOpacityScrollEffect([{"in":[-Infinity,0.15],"opacity":0,"fade":0},{"in":[0.15,0.15],"opacity":0},{"in":[0.15,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
+$('#u5447').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0.15],"opacity":0},{"in":[0.15,0.15],"opacity":0},{"fade":25,"in":[0.15,Infinity],"opacity":100}]);/* scroll effect */
 $('#u5602').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
