--- a/gk/phone/home-dark.html
+++ b/gk/phone/home-dark.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>God's Kid Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=484416239" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=3776338450" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5595 {  pointer-events: none;}</style>
   <!--/*
@@ -54,9 +54,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U4421-BP_infinity" template="phone/home-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext anim_swing museBGSize Banner mse_pre_init" id="u4421" href="home-dark.html#gkdark" data-href="anchor:U4368:U4373" data-muse-uid="U4421"><!-- content --></a>
     <!-- /m_editable -->
-    <div class="mse_pre_init" id="u5595"><!-- animation -->
-     <iframe class="animationContainer an_invi" id="U5598_animation" src="../assets/curtain_night_mobile/curtain_night_mobile.html" scrolling="no"></iframe>
-    </div>
    </div>
    <div class="clearfix grpelem" id="pgkdark"><!-- column -->
     <a class="anchor_item colelem" id="gkdark"></a>
@@ -396,7 +393,6 @@ var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","muse
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u4436').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
@@ -408,13 +404,12 @@ $('#u4450-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{
 $('#u4454-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u5246').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u4455').registerPositionScrollEffect([{"in":[-Infinity,649.05],"speed":[0,0]},{"in":[649.05,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u4455').registerOpacityScrollEffect([{"in":[-Infinity,649.05],"opacity":0,"fade":0},{"in":[649.05,649.05],"opacity":0},{"in":[649.05,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
+$('#u4455').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,649.05],"opacity":0},{"in":[649.05,649.05],"opacity":0},{"fade":25,"in":[649.05,Infinity],"opacity":100}]);/* scroll effect */
 $('#u4418').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u4418').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
+$('#u4418').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"in":[0,0],"opacity":100},{"fade":100,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
 $('#u4424').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u4424').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":20}]);/* scroll effect */
+$('#u4424').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"in":[0,0],"opacity":100},{"fade":20,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
 $('#u4421').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,5]}]);/* scroll effect */
-$('#u5595').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
