--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="row">
-			<div id="billinitialdiv" class="column">
+			<div class="billdiv" id="billinitialdiv" class="column">
 				<img class="billimg" id="billinitialimg" src="assets/bill_rod.jpg" alt="Rags2Riches Bill">
 
 				<br>
@@ -24,7 +24,7 @@
 				</a>
 			</div>
 
-			<div id="billgenerateddiv" class="column">
+			<div class="billdiv" id="billgenerateddiv" class="column">
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
 				<br>
 				<a href="#" id="download-btn" download="Rags2Riches.jpg" class="rodbutton disabled" onclick="download_canvas_img(this);">
@@ -38,21 +38,11 @@
 		</div>
 
 		<div class="streaming">
-			<a href="#" class="streaminglink" target="_blank">
-				<img class="streamingimg" id="spotify" src="assets/dsp/spotify.png" alt="Listen on Spotify">
-			</a>
-			<a href="#" class="streaminglink" target="_blank">
-				<img class="streamingimg" id="apple" src="assets/dsp/apple.png" alt="Listen on Apple Music">
-			</a>
-			<br><a href="#" class="streaminglink" target="_blank">
-				<img class="streamingimg" id="tidal" src="assets/dsp/tidal.png" alt="Listen on Tidal">
-			</a>
-			<a href="#" class="streaminglink" target="_blank">
-				<img class="streamingimg" id="soundcloud" src="assets/dsp/soundcloud.png" alt="Listen on Soundcloud">
-			</a>
-			<br><a href="#" class="streaminglink" target="_blank">
-				<img class="streamingimg" id="apple" src="assets/dsp/youtube.png" alt="Listen on YouTube">
-			</a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="spotify" src="assets/dsp/spotify.png" alt="Listen on Spotify"></a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/apple.png" alt="Listen on Apple Music"></a>
+			<br><a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="tidal" src="assets/dsp/tidal.png" alt="Listen on Tidal"></a>
+			<a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="soundcloud" src="assets/dsp/soundcloud.png" alt="Listen on Soundcloud"></a>
+			<br><a href="#" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/youtube.png" alt="Listen on YouTube"></a>
 		</div>
 
 		<div class="footer">
