lil button tweaks

--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<title>Rags2Riches</title>
+		<meta name="title" content="Rags2Riches">
+		<meta name="description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 
 		<link rel="stylesheet" href="css/style.css">
 	</head>
