--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -8,6 +8,20 @@
 		<meta name="title" content="Rags2Riches">
 		<meta name="description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://rags-2riches.com">
+		<meta property="og:title" content="Rags2Riches">
+		<meta property="og:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
+		<meta property="og:image" content="assets/bill_rod.jpg">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://rags-2-riches.com">
+		<meta property="twitter:title" content="Rags2Riches">
+		<meta property="twitter:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
+		<meta property="twitter:image" content="assets/bill_rod.jpg">
+
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
