moving things around on the rod wave design page

--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -37,7 +37,7 @@
 
 				<br>
 				<input type="file" id="selectedFace" class="uploadface-btn" name="file_photo" style="display: none;" />
-				<a href="#" id="upload-btn" class="rodbutton" onclick="document.getElementById('selectedFace').click();return false;">
+				<a href="#billgenerateddiv" id="upload-btn" class="rodbutton" onclick="document.getElementById('selectedFace').click();return false;">
 					<img class="rodbuttonimg" id="uploadbtnimg" src="assets/btn_uploadimage.png" alt="Upload Image">
 				</a>
 			</div>
