--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -24,7 +24,7 @@
 		<meta property="twitter:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 		<meta property="twitter:image" content="assets/bill_rod.jpg">
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css?rnd=10">
 	</head>
 	<body>
 		<div class="header">
