--- a/rodwave/rags2riches_design/index.html
+++ b/rodwave/rags2riches_design/index.html
@@ -24,6 +24,8 @@
 		<meta property="twitter:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 		<meta property="twitter:image" content="assets/bill_rod.jpg">
 
+		<link rel='stylesheet' href='js/croppie.css'>
+		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 		<link rel="stylesheet" href="css/style.css?rnd=10">
 	</head>
 	<body>
