--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -11,7 +11,7 @@
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<!-- TODO: CHANGE INTERNAL URL -->
-		<meta property="og:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_design/">
+		<meta property="og:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_all/">
 		<meta property="og:title" content="Rags2Riches">
 		<meta property="og:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 		<meta property="og:image" content="assets/bill_rod.jpg">
@@ -19,14 +19,14 @@
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<!-- TODO: CHANGE INTERNAL URL -->
-		<meta property="twitter:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_design/">
+		<meta property="twitter:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_all/">
 		<meta property="twitter:title" content="Rags2Riches">
 		<meta property="twitter:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
 		<meta property="twitter:image" content="assets/bill_rod.jpg">
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-		<link rel="stylesheet" href="css/style.css?rnd=50">
+		<link rel="stylesheet" href="css/style.css?rnd=10">
 	</head>
 	<body>
 		<div class="header">
@@ -39,7 +39,7 @@
 
 				<br>
 				<input type="file" id="selectedFace" class="uploadface-btn" name="file_photo" style="display: none;" />
-				<a href="#billgenerateddiv" id="upload-btn" class="rodbutton" onclick="document.getElementById('selectedFace').click();return false;">
+				<a href="#" id="upload-btn" class="rodbutton" onclick="document.getElementById('selectedFace').click();return false;">
 					<img class="rodbuttonimg" id="uploadbtnimg" src="assets/btn_uploadimage.png" alt="Upload Image">
 				</a>
 			</div>
@@ -75,5 +75,50 @@
 			<div style="clear: both;"></div>
 		</div>
 
+		<!-- START INVISIBLE DIVS -->
+		<div class="invisiblediv" id="invisiblecanvasdiv">
+			<canvas id="initialbillcanvas" width="945" height="402" style="border:1px solid #d3d3d3;">
+				Your browser does not support the HTML5 canvas tag.
+			</canvas>
+		</div>
+
+		<div class="invisiblediv" id="invisiblefinalcanvasdiv">
+			<canvas id="finalrodcanvas" width="1200" height="1200" style="border:1px solid #d3d3d3;">
+				Your browser does not support the HTML5 canvas tag.
+			</canvas>
+		</div>
+
+		<div class="invisiblediv" id="invisiblefacediv">
+			<img id="faceimg" src="">
+		</div>
+		<!-- END INVISIBLE DIVS -->
+
+		<!-- START PHOTO MODAL -->
+		<div class="modal fade" id="cropImagePop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">
+						<?=multiLanguage( "Edit Foto" , "Edit Photo" )?></h4>
+					</div>
+					<div class="modal-body">
+						<div id="upload-demo" class="center-block"></div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-default" id="flipImageBtn">Flip photo</button>
+						<button type="button" id="cropImageBtn" class="btn btn-primary">Crop</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- END PHOTO MODAL -->
+
+		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
+		<script src="js/croppie.min.js" charset="utf-8"></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+		<script src="js/exif-js.js"></script>
+		<script src="js/rags2riches.js" charset="utf-8"></script>
 	</body>
 </html>
