switch around rodwave and tb logos

--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -26,7 +26,7 @@
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-		<link rel="stylesheet" href="css/style.css?rnd=10">
+		<link rel="stylesheet" href="css/style.css?rnd=70">
 	</head>
 	<body>
 		<div class="header">
@@ -66,11 +66,11 @@
 		</div>
 
 		<div class="footer">
-			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignleft" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
-			</a>
 			<a href="#" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignright" src="assets/rodwavelogo.png" alt="Rod Wave">
+				<img class="footerlogoimg alignleft" src="assets/rodwavelogo.png" alt="Rod Wave">
+			</a>
+			<a href="https://tacklebox.company" class="footerlink" target="_blank">
+				<img class="footerlogoimg alignright" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
 			</a>
 			<div style="clear: both;"></div>
 		</div>
