--- a/rodwave/rags2riches_outerframetest/index.html
+++ b/rodwave/rags2riches_outerframetest/index.html
@@ -46,7 +46,9 @@
 
 			<div class="billdiv" id="billgenerateddiv" class="column">
 				<!-- start outer frame code -->
-				<div id="generatedouterframe"></div>
+				<div id="cameraflash">
+					<img id="cameraflashimg" src="assets/cameraflash.png" alt="">
+				</div>
 				<!-- end outer frame code -->
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
 				<br>
