new croppie flip/rotate code, move camera flash to main rags2riches working project

--- a/rodwave/rags2riches_outerframetest_nonmin/index.html
+++ b/rodwave/rags2riches_outerframetest_nonmin/index.html
@@ -112,7 +112,8 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-default" id="flipImageBtn">Flip photo</button>
+						<button type="button" class="btn btn-default" id="flipImageBtn">Flip</button>
+						<button type="button" class="btn btn-default" id="rotateBtn" data-deg="-90">Rotate</button>
 						<button type="button" id="cropImageBtn" class="btn btn-primary">Crop</button>
 					</div>
 				</div>
