--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -45,6 +45,11 @@
 			</div>
 
 			<div class="billdiv" id="billgenerateddiv" class="column">
+				<!-- start outer frame code -->
+				<div id="cameraflash">
+					<img id="cameraflashimg" src="assets/cameraflash.png" alt="">
+				</div>
+				<!-- end outer frame code -->
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
 				<br>
 				<a href="#" id="download-btn" download="Rags2Riches.jpg" class="rodbutton disabled" onclick="download_canvas_img(this);">
@@ -107,7 +112,8 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-default" id="flipImageBtn">Flip photo</button>
+						<button type="button" class="btn btn-default" id="flipImageBtn">Flip</button>
+						<button type="button" class="btn btn-default" id="rotateBtn" data-deg="-90">Rotate</button>
 						<button type="button" id="cropImageBtn" class="btn btn-primary">Crop</button>
 					</div>
 				</div>
