new camera flash image, faster camera flash ani, changed rodwave link

--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -47,7 +47,7 @@
 			<div class="billdiv" id="billgenerateddiv" class="column">
 				<!-- start outer frame code -->
 				<div id="cameraflash">
-					<img id="cameraflashimg" src="assets/cameraflash.png" alt="">
+					<img id="cameraflashimg" src="assets/cameraflash2.png" alt="">
 				</div>
 				<!-- end outer frame code -->
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
@@ -71,7 +71,7 @@
 		</div>
 
 		<div class="footer">
-			<a href="#" class="footerlink" target="_blank">
+			<a href="https://rod-wave.com" class="footerlink" target="_blank">
 				<img class="footerlogoimg alignleft" src="assets/rodwavelogo.png" alt="Rod Wave">
 			</a>
 			<a href="https://tacklebox.company" class="footerlink" target="_blank">
