adjusting camera flash on mobile

--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -47,7 +47,7 @@
 			<div class="billdiv" id="billgenerateddiv" class="column">
 				<!-- start outer frame code -->
 				<div id="cameraflash">
-					<img id="cameraflashimg" src="assets/cameraflash2.png" alt="">
+					<img id="cameraflashimg" src="assets/cameraflash.png" alt="">
 				</div>
 				<!-- end outer frame code -->
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
