--- a/rodwave/rags2riches_all/index.html
+++ b/rodwave/rags2riches_all/index.html
@@ -6,23 +6,29 @@
 
 		<title>Rags2Riches</title>
 		<meta name="title" content="Rags2Riches">
-		<meta name="description" content="Rod Wave - Pray 4 Love Deluxe out now!">
+		<meta name="description" content="Rags2Riches Meme Generator // Rod Wave - Pray 4 Love Deluxe out now!">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dea82e">
+		<meta name="msapplication-TileColor" content="#ffc40d">
+		<meta name="theme-color" content="#ffffff">
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<!-- TODO: CHANGE INTERNAL URL -->
-		<meta property="og:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_all/">
+		<meta property="og:url" content="https://rags-2-riches.com">
 		<meta property="og:title" content="Rags2Riches">
-		<meta property="og:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
-		<meta property="og:image" content="assets/bill_rod.jpg">
+		<meta property="og:description" content="Rags2Riches Meme Generator // Rod Wave - Pray 4 Love Deluxe out now!">
+		<meta property="og:image" content="https://rags-2-riches.com/assets/bill_rod.jpg">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<!-- TODO: CHANGE INTERNAL URL -->
-		<meta property="twitter:url" content="https://lanceencarnado.github.io/rodwave/rags2riches_all/">
+		<meta property="twitter:url" content="https://rags-2-riches.com">
 		<meta property="twitter:title" content="Rags2Riches">
-		<meta property="twitter:description" content="Rod Wave - Pray 4 Love Deluxe out now!">
-		<meta property="twitter:image" content="assets/bill_rod.jpg">
+		<meta property="twitter:description" content="Rags2Riches Meme Generator // Rod Wave - Pray 4 Love Deluxe out now!">
+		<meta property="twitter:image" content="https://rags-2-riches.com/assets/bill_rod.jpg">
 
 		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -45,11 +51,9 @@
 			</div>
 
 			<div class="billdiv" id="billgenerateddiv" class="column">
-				<!-- start outer frame code -->
 				<div id="cameraflash">
 					<img id="cameraflashimg" src="assets/cameraflash.png" alt="">
 				</div>
-				<!-- end outer frame code -->
 				<img class="billimg" id="billgeneratedimg" src="assets/bill_question.jpg" alt="Rags2Riches Bill">
 				<br>
 				<a href="#" id="download-btn" download="Rags2Riches.jpg" class="rodbutton disabled" onclick="download_canvas_img(this);">
