gk - moved games to games folder, TC soundboard - new sounds

--- a/gk/games.html
+++ b/gk/games.html
@@ -68,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u3687-bw">
      <div id="u3687"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="80%" height="720" scrolling="no"></iframe>
+<iframe id="cubpupiframe" src="./games/cubpup/index.html" width="80%" height="720" scrolling="no"></iframe>
 </div>
      </div>
     </div>
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u3689-bw">
      <div id="u3689"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_responsive/" width="80%" height="700"></iframe>
+<iframe id="puzzleiframe" src="./games/puzzle_responsive/index.html" width="80%" height="700"></iframe>
 </div>
      </div>
     </div>
