TC soundboard - dark mode

--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -12,7 +12,7 @@ your dad took the bread and he like, absconded man
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="@LScorrcho">
-	<meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
+	<meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Apple Music 1.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This Show Rules - Time Crisis Soundboard</title>
 
@@ -30,7 +30,7 @@ your dad took the bread and he like, absconded man
 		<div id="soundboard"></div>
 		<div class="footerdiv">
 			THIS SHOW RULES - A TIME CRISIS SOUNDBOARD // BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>
-			<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
+			<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON APPLE MUSIC 1.
 			<br><br>THISSHOWRULES.COM IS A POPCORN AND RAISINS-FREE ZONE.
 		</div>
 		<script src="js/index.js?rnd=215"></script>
