artist page revamp, most artists done

--- a/amco/index_preartistchange.html
+++ b/amco/index_preartistchange.html
@@ -80,67 +80,11 @@
             </div>
             <div id="artist">
                 <div class="artis-title">ARTISTS</div>
-                <!-- <div class="artis-title2">CURRENT ROSTER</div> -->
+                <div class="artis-title2">CURRENT ROSTER</div>
                 <div class="artist-cont">
 
                     <div class="row justify-content-center">
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/10AY17ALos2o3akPqrPydw?si=-4x67zSOQ2WQYeNbgTVfYQ">
-									<img src="img/roster/Father_Photo.jpg">
-									<div class="artname"><span>Father</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/3ZJxEmjYZd5VOqZ8o3aXiL?si=c2_e0YL2QK6ss6nHQbInUA">
-									<img src="img/roster/ABRA_Photo.jpg">
-									<div class="artname"><span>ABRA</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/1UH80jhsYsFztK0anu2FNS?si=VQNxZXPpSDetCR2H_LQJXg">
-									<img src="img/roster/Zack_Fox_Photo.jpg">
-									<div class="artname"><span>Zack Fox</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/2dZGZpAgfWlVxCSFDqbytg?si=nPE9HCJqTCyotQlizW-1SQ">
-									<img src="img/roster/Since99_Photo.jpg">
-									<div class="artname"><span>Since99</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://genius.com/artists/Ethereal">
-									<img src="img/roster/Ethereal_Photo.jpg">
-									<div class="artname"><span>Ethereal</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/699OTQXzgjhIYAHMy9RyPD?si=4fTThNgdRzW1R6LNCy7kUw">
-									<img src="img/roster/Playboi_Carti_Photo.jpg">
-									<div class="artname"><span>Playboi Carti</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/2qDdxfKUpYg8wc49KIuT3b?si=rSnv3CgeQN6VMT4HejQ7Ig">
-									<img src="img/roster/Tommy_Genesis_Photo.jpg">
-									<div class="artname"><span>Tommy Genesis</span></div>
-								</a>
-							</div>
-						</div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="artphoto">
                                 <a href="https://open.spotify.com/artist/4PfKPdq8QEgcerLwGApWIp?si=hHlTq6R4Qn6P4-xuBt3eFA">
                                     <img src="img/roster/EGOVERT_Photo.jpg">
@@ -148,7 +92,15 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
+                            <div class="artphoto">
+                                <a href="https://open.spotify.com/artist/2dZGZpAgfWlVxCSFDqbytg?si=nPE9HCJqTCyotQlizW-1SQ">
+                                    <img src="img/roster/Since99_Photo.jpg">
+                                    <div class="artname"><span>Since99</span></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="artphoto">
                                 <a href="https://genius.com/artists/Marc-boomin">
                                     <img src="img/roster/Marc_Boomin_Photo.jpg">
@@ -156,7 +108,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="artphoto">
                                 <a href="https://open.spotify.com/artist/3YqwRvYhfxmCFYIfvxaCAa?si=eakHN-q3SEOlzf3QetyBdw">
                                     <img src="img/roster/Goonew_Photo.jpg">
@@ -164,7 +116,23 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
+                            <div class="artphoto">
+                                <a href="https://open.spotify.com/artist/10AY17ALos2o3akPqrPydw?si=-4x67zSOQ2WQYeNbgTVfYQ">
+                                    <img src="img/roster/Father_Photo.jpg">
+                                    <div class="artname"><span>Father</span></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
+                            <div class="artphoto">
+                                <a href="https://genius.com/artists/Ethereal">
+                                    <img src="img/roster/Ethereal_Photo.jpg">
+                                    <div class="artname"><span>Ethereal</span></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="artphoto">
                                 <a href="https://instagram.com/dannyg_beats?utm_medium=copy_link">
                                     <img src="img/roster/Danny.jpg">
@@ -174,8 +142,44 @@
                         </div>
                     </div>
 
-					<!-- artists we've worked with used to be here -->
+                    <div class="under artis-title2 mt-4">Artists we’ve worked with</div>
 
+                    <div class="row justify-content-center">
+                        <div class="col-sm-9">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="artphoto mb-2">
+                                        <!-- <img src="img/artists/ABRA_Photo.jpg"> -->
+                                        <div class="artname2">ABRA</div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 text-right-sm">
+                                    <div class="artphoto mb-2">
+                                        <!-- <img src="img/artists/Danger_Incorporated_Photo.jpg"> -->
+                                        <div class="artname2">Danger Incorporated</div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="artphoto mb-2">
+                                        <!-- <img src="img/artists/Faye_Webster_Photo.jpg"> -->
+                                        <div class="artname2">Faye Webster</div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 text-right-sm">
+                                    <div class="artphoto mb-2">
+                                        <!-- <img src="img/artists/Playboi_Carti_Photo.jpg"> -->
+                                        <div class="artname2">Playboi Carti</div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="artphoto mb-2">
+                                        <!-- <img src="img/artists/Tommy_Genesis_Photo.jpg"> -->
+                                        <div class="artname2">Tommy Genesis</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -213,8 +217,7 @@
                 $("body").removeClass("showintro");
                 $("body").removeClass("pre-load");
                 $("body").addClass("hideintro");
-            }, 5);
-			// LANCE TODO CHANGE THIS BACK TO 3000
+            }, 3000);
         </script>
     </body>
 </html>
