finished artist revamp, some other fixes

--- a/amco/index.html
+++ b/amco/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/stylev2.css" type="text/css" />
     </head>
 
-    <body id="headfix" class="showintro pre-load">
+    <body id="headfix" class="showintro pre-load" ontouchstart>
         <div class="intro">
             <div class="navsec">
                 <div id="logo" class="apparitionLogo2 d-flex">
@@ -140,6 +140,22 @@
 								</a>
 							</div>
 						</div>
+						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+							<div class="artphoto">
+								<a href="https://open.spotify.com/artist/6bnlvICBjK7fuNSB1ohqS5?si=c3oTirp6R9ODa0IyZm6vjw">
+									<img src="img/roster/Danger_Incorporated_Photo.jpg">
+									<div class="artname"><span>Danger<br> Incorporated</span></div>
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+							<div class="artphoto">
+								<a href="https://open.spotify.com/artist/5szilpXHcwOqnyKLqGco5j?si=KczswTt-Qk-6MmX_Hah7ag">
+									<img src="img/roster/Faye_Webster_Photo.jpg">
+									<div class="artname"><span>Faye Webster</span></div>
+								</a>
+							</div>
+						</div>
                         <div class="col-lg-3 col-md-4 col-sm-4 col-4">
                             <div class="artphoto">
                                 <a href="https://open.spotify.com/artist/4PfKPdq8QEgcerLwGApWIp?si=hHlTq6R4Qn6P4-xuBt3eFA">
@@ -148,27 +164,19 @@
                                 </a>
                             </div>
                         </div>
+						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+							<div class="artphoto">
+								<a href="https://open.spotify.com/artist/3YqwRvYhfxmCFYIfvxaCAa?si=eakHN-q3SEOlzf3QetyBdw">
+									<img src="img/roster/Goonew_Photo.jpg">
+									<div class="artname"><span>Goonew</span></div>
+								</a>
+							</div>
+						</div>
                         <div class="col-lg-3 col-md-4 col-sm-4 col-4">
                             <div class="artphoto">
                                 <a href="https://genius.com/artists/Marc-boomin">
                                     <img src="img/roster/Marc_Boomin_Photo.jpg">
                                     <div class="artname"><span>Marc Boomin</span></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
-                            <div class="artphoto">
-                                <a href="https://open.spotify.com/artist/3YqwRvYhfxmCFYIfvxaCAa?si=eakHN-q3SEOlzf3QetyBdw">
-                                    <img src="img/roster/Goonew_Photo.jpg">
-                                    <div class="artname"><span>Goonew</span></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
-                            <div class="artphoto">
-                                <a href="https://instagram.com/dannyg_beats?utm_medium=copy_link">
-                                    <img src="img/roster/Danny.jpg">
-                                    <div class="artname"><span>Danny G</span></div>
                                 </a>
                             </div>
                         </div>
