--- a/amco/index.html
+++ b/amco/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=9" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="img/fav.ico">
+        <link rel="shortcut icon" href="img/favicon.ico">
         <title>AMCO Music</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/stylev2.css" type="text/css" />
