--- a/amco/index.html
+++ b/amco/index.html
@@ -224,5 +224,9 @@
             }, 5);
 			// LANCE TODO CHANGE THIS BACK TO 3000
         </script>
+		<script src="js/zenscroll-min.js"></script>
+		<script>
+			zenscroll.setup(null, 81);
+		</script>
     </body>
 </html>
