new ("last notes") fixes

--- a/amco/index.html
+++ b/amco/index.html
@@ -66,6 +66,7 @@
 				<!-- LANCE TIKTOK FIX -->
 				<a href="https://www.tiktok.com/@anatlantacompany" class="icon" id="tiktok">&nbsp;</a>
                 <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
+				<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
             </div>
             <div id="about">
                 <div class="about-cont">
@@ -197,8 +198,9 @@
 						<!-- LANCE TIKTOK FIX -->
 						<a href="https://www.tiktok.com/@anatlantacompany" class="icon" id="tiktok">&nbsp;</a>
                         <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
+						<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
                     </div>
-                    <div class="fttex mt-2">AN ATLANTA MUSIC COMPANY. A MUSIC DISTRIBUTION AND PUBLISHING GROUP WITH A GLOBAL VENTURE WITH OPPOSITION/BBTV [DISTRIBUTION]. HOME TO FIERCELY CREATIVE TALENT.</div>
+                    <div class="fttex mt-2">AN ATLANTA MUSIC COMPANY IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION. FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
                      <div class="fttex2 mt-3">© 2021 AN ATLANTA MUSIC COMPANY LLC</div>
                 </div>
             </div>
