--- a/amcopreredesign/index.html
+++ b/amcopreredesign/index.html
@@ -5,14 +5,13 @@
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=9" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>AMCO</title>
+        <title>AMCO Music</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/stylev2.css" type="text/css" />
     </head>
 
     <body id="headfix" class="showintro pre-load" ontouchstart>
-		<!-- LANCE no intro -->
-        <!-- <div class="intro">
+        <div class="intro">
             <div class="navsec">
                 <div id="logo" class="apparitionLogo2 d-flex">
                     <img src="img/logo.png">
@@ -24,7 +23,7 @@
                     <div class="preline"></div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="start-cont">
             <div class="videoWrapper apparitionVideo">
                 <div id="player"></div>
@@ -33,9 +32,8 @@
 
             <div class="navsec" id="navbars">
                 <div id="logo" class="apparitionLogo d-flex">
-                    <img src="img/logowtext.png">
-					<!-- LANCE no text on header logo -->
-                    <!-- <div class="fieue">AMCO</div> -->
+                    <img src="img/logo.png">
+                    <div class="fieue">an Atlanta Music Company</div>
                 </div>
                 <div class="treeline">
                     <img src="img/menu.svg" width="20" class="vfee">
@@ -48,13 +46,13 @@
                 <h2>AMCO Highlights</h2>
                 <a href="https://www.youtube.com/playlist?list=PLjFnvVNAGuGSOOmZcCIOIw-gigPxVUlcb" class="button">Watch on Youtube</a>
                 <div id="controls">
-                    <div class="icon-player" id="previous">&nbsp;</div>
+                    <div class="icon" id="previous">&nbsp;</div>
 
                     <input type="checkbox" id="backgroundToggle" />
-                    <label for="backgroundToggle" id="sound" class="icon-player">&nbsp;</label>
+                    <label for="backgroundToggle" id="sound" class="icon">&nbsp;</label>
 
                     <!--<div class="icon" id="sound">&nbsp;</div>-->
-                    <div class="icon-player" id="next">&nbsp;</div>
+                    <div class="icon" id="next">&nbsp;</div>
                 </div>
             </div>
             <div id="mnue" class="apparitionSocials">
@@ -72,15 +70,12 @@
             </div>
             <div id="about">
                 <div class="about-cont">
-                    <!-- <div class="about-big">
+                    <div class="about-big">
                         FOR ARTISTS<br>WITH GREAT MUSIC<br>AND A STORY TO TELL.
-                    </div> -->
-					<div class="about-logo">
-						<img src="img/logo_black.png" alt="AMCO">
-					</div>
+                    </div>
                     <div class="about-desc">
-						<p>Storytelling and good music epitomize the vision of an Atlanta Music Company.<br> We are a distribution, publishing and management company committed to working with artists who captivate and stay true to their respective imagination.</p>
-						<p>AMCO is founded by the team behind renowned independent music collective, Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, ABRA, Tommy Genesis, Faye Webster, and Danger Incorporated, amongst others.</p>
+                        <p>Founded by the team behind renowned independent music collective, Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, ABRA, Tommy Genesis, Faye Webster, and Danger Incorporated, amongst others.</p>
+                        <p>We deploy an artist-first approach in everything we do and offer end-to-end digital distribution and publishing services. The goal: help you scale and earn on your own terms, with a team that has a demonstrated history working with independent artists who have a story to tell.</p>
                     </div>
                 </div>
             </div>
@@ -228,7 +223,7 @@
                 $("body").removeClass("showintro");
                 $("body").removeClass("pre-load");
                 $("body").addClass("hideintro");
-            }, 50);
+            }, 3000);
         </script>
 		<script src="js/zenscroll-min.js"></script>
 		<script>
