--- a/amco/index.html
+++ b/amco/index.html
@@ -79,8 +79,9 @@
 						<img src="img/logo_black.png" alt="AMCO">
 					</div>
                     <div class="about-desc">
-						<p>Storytelling and good music epitomize the vision of an Atlanta Music Company.<br> We are a distribution, publishing and management company committed to working with artists who captivate and stay true to their respective imagination.</p>
+						<p>Storytelling and good music epitomize the vision of AMCO. We are a distribution, publishing and management company committed to working with artists who captivate and stay true to their respective imagination.</p>
 						<p>AMCO is founded by the team behind renowned independent music collective, Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, ABRA, Tommy Genesis, Faye Webster, and Danger Incorporated, amongst others.</p>
+
                     </div>
                 </div>
             </div>
@@ -205,8 +206,8 @@
                         <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
 						<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
                     </div>
-                    <div class="fttex mt-2">AN ATLANTA MUSIC COMPANY IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION. FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
-                     <div class="fttex2 mt-3">© 2021 AN ATLANTA MUSIC COMPANY LLC</div>
+                    <div class="fttex mt-2">AMCO IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION. FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
+                     <div class="fttex2 mt-3">© 2021 ATLANTA MUSIC COMPANY LLC</div>
                 </div>
             </div>
         </div>
