added submit button

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -105,6 +105,9 @@ by tacklebox / coded by @LScorrcho (2020)
 				<br>RECORD YOUR ANSWER AND INCLUDE
 				<br>A SOUNDCLOUD LINK BELOW.</label>
 				<br><input name="email" type="email" placeholder="SoundCloud Link">
+
+				<br>
+				<input type="submit" value="SUBMIT">
 			</form>
 
 			<br>5. WIN TICKETS TO ROD WAVE'S
